[tool.poetry]
name = "od-feast"
version = "0.18"
description = "Feast Opendoor Forked"
authors = ["ZF Deng <zhifeng.deng@opendoor.com>"]
packages = [
  {include = "feast"},
]

[[tool.poetry.source]]
name = "pypi-local"
url = "https://opendoor.jfrog.io/opendoor/api/pypi/pip/simple"

[tool.poetry.dependencies]
python = "^3.9"
Click = "^8.*"
colorama = ">=0.3.9"
dill = "^0.3.*"
fastavro = ">=1.1.0"
google-api-core = ">=1.23.0"
googleapis-common-protos = "^1.52.*"
grpcio = ">=1.34.0"
grpcio-reflection = ">=1.34.0"
Jinja2 = ">=2.0.0"
numpy = ">=1.7"
pandas = ">=1.0.0"
pandavro = "^1.5.*"
protobuf = ">=3.10"
proto-plus = "<1.19.7"
pyarrow = ">=4.0.0"
pydantic = ">=1.0.0"
PyYAML = ">=5.4.*"
tabulate = "^0.8.*"
tenacity = ">=7.*"
toml = "^0.10.*"
tqdm = "^4.*"
fastapi = ">=0.68.0"
uvicorn = { version = ">=0.14.0", extras=["standard"] }
tensorflow-metadata = "^1.*"
mmh3 = "^3.0.0"
jsonschema = "^4.4.0"

# Snowflake optional
snowflake-connector-python = { version="^2.7.3", extras=["pandas"], optional=true }

# Great expectations
great_expectations = { version="^0.14.*", optional=true }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
snowflake = ["snowflake-connector-python"]
ge = ["great_expectations"]


[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | pb2.py
    | \.pyi
    | protos
  )/
)
'''
